--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^8.1.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
+    "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^7.12.1"
