--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "serve-favicon": "^2.5.0"
   }
 }
