--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:Goofy@9657@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
