--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^7.12.1",
